appId: com.church.artos
---
- pressKey: back
- openLink: diakonia:///inicio
- waitForAnimationToEnd:
    timeout: 3000
- openLink: diakonia:///pessoal/indisponibilidade
- waitForAnimationToEnd:
    timeout: 4000
- tapOn: 'Regras'
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    point: '40%,20%'
- waitForAnimationToEnd:
    timeout: 2000
- takeScreenshot: bug-a-editar-chips
