appId: com.church.artos
---
- pressKey: back
- openLink: diakonia:///inicio
- waitForAnimationToEnd:
    timeout: 3000
- openLink: diakonia:///pessoal/indisponibilidade
- waitForAnimationToEnd:
    timeout: 4000
- tapOn: 'Regras'
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: 'fab-add-regra'
- waitForAnimationToEnd:
    timeout: 2000
