appId: com.church.artos
---
- openLink: diakonia:///inicio
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: '6%,4%'
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    text: 'Audiovisual'
- waitForAnimationToEnd:
    timeout: 1500
- tapOn:
    text: 'Acessos'
- waitForAnimationToEnd:
    timeout: 4000
